<resources>
    <string name="app_name" translatable="false">Java-Android</string>
    <string name="sections_label">Sections</string>
    <string name="button_geo_genius">Geo Genius</string>
    <string name="title_activity_geo_genius">GeoGenius</string>
    <string name="login_title">Log In</string>
    <string name="user_label">User</string>
    <string name="password_label">Password</string>
    <string name="loginTitle">Log In</string>
    <string name="hint_user">Max 15 alphanumeric chars</string>
    <string name="hint_psw">At least 8 chars</string>
    <string name="string_register">Register</string>
    <string name="credentials_filename">Credentials.txt</string>
    <string name="title_activity_geo_genius_home">GeoGeniusHome</string>
    <string name="world_map_desc">World Map</string>
    <string name="action_capitals">Capitals</string>
    <string name="action_rivers">Rivers</string>
    <string name="action_lakes">Lakes</string>
    <string name="action_monuments">Monuments</string>
    <string name="title_activity_capitals">Capitals</string>
    <string name="title_activity_rivers">Rivers</string>
    <string name="capitals">Capitals</string>
    <string name="rivers">Rivers</string>
    <string name="lakes">Lakes</string>
    <string name="monuments">Monuments</string>
    <string name="movie_player">Movie Player</string>
    <string name="thumbnail_description">Item Description</string>
    <string name="movie_title">Movie Title</string>
    <string name="duration">Duration</string>
    <string name="label_randomizer">Randomizer</string>
    <string name="button_generate">Generate</string>
    <string name="rand_category_color">Color Code</string>
    <string name="rand_category_numbers">Number Randomizer</string>
    <string name="upper_bound_hint">Upper Bound</string>
    <string name="rand_category_colors">Random Color Generator</string>
    <string name="rand_copy_num">Copy Number</string>
    <string name="rand_copy_color">Copy Color Code</string>
    <string name="fragment_activity_title">Fragment Test</string>

    <!--  Shared Preference API Test  -->
    <string name="rivers_key">Fiumi@reallybelli</string>

    <string name="key_preference">net.davoleo.java_android.key_preference</string>
    <string name="key_status_preference">net.davoleo.java_android.key_status_preference</string>
    <string name="sqlite_activity_title">SQLite Test</string>
    <string name="recycler_activity_title">Recycler View Test</string>
    <string name="appbar_activity_title">App Bar Test</string>

    <string-array name="android_verions">
        <item>Cupcake</item>
        <item>Donut</item>
        <item>Eclair</item>
        <item>Froyo</item>
        <item>Gingerbread</item>
        <item>Honeycomb</item>
        <item>Ice Cream Sandwich</item>
        <item>Jelly Bean</item>
        <item>KitKat</item>
        <item>Lollipop</item>
        <item>Marshmallow</item>
        <item>Nougat</item>
        <item>Oreo</item>
        <item>Pie</item>
        <item>Android Q (10)</item>
    </string-array>
</resources>
