<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_capitals"
          android:orderInCategory="100"
          app:showAsAction="never"
          android:title="@string/action_capitals"/>

    <item android:id="@+id/action_rivers"
          android:orderInCategory="200"
          app:showAsAction="never"
          android:title="@string/action_rivers"/>

    <item android:id="@+id/action_lakes"
          android:orderInCategory="300"
          app:showAsAction="never"
          android:title="@string/action_lakes"/>

    <item android:id="@+id/action_monuments"
          android:orderInCategory="400"
          app:showAsAction="never"
          android:title="@string/action_monuments"/>

</menu>