<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="io.github.davoleo.javandroid.geo_genius.GeoGeniusLogin" android:orientation="vertical">

    <TextView
            android:text="@string/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:gravity="center_horizontal"
            android:textSize="24sp" android:textColor="@color/darkAqua"/>
    <TextView
            android:text="@string/user_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/labelUser"
            tools:layout_marginTop="@dimen/large_line_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/textboxUser" android:hint="@string/hint_user"/>
    <TextView
            android:text="@string/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/labelPsw"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="@dimen/fab_margin"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/textboxPsw" tools:hint="@string/hint_psw"/>
    <Button
            android:text="@string/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonLogin"
            tools:layout_marginTop="@dimen/fab_margin" android:onClick="onClickLogin"/>
    <Button
            android:text="@string/string_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonRegister"
            android:onClick="onClickRegister"/>
</LinearLayout>